[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "flask-simpleldap"
description = "LDAP authentication extension for Flask"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Alexandre Ferland", email = "me@alexferl.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [ "version" ]
dependencies = [
  "flask>=2.3.3",
  "python-ldap>=3.0.0",
]

urls.Homepage = "https://github.com/alexferl/flask-simpleldap"

[dependency-groups]
dev = [
  "coverage==7.13.0",
  "pre-commit==4.5.1",
  "ruff==0.14.14",
]

[tool.hatch.build.targets.wheel]
packages = [ "flask_simpleldap" ]

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>[^\\s]+)"

[tool.ruff]
line-length = 120
lint.select = [ "I" ] # Enable isort rules

[tool.pyproject-fmt]
column_width = 120
indent = 2
keep_full_version = true
max_supported_python = "3.14"
