[metadata]
name = Flask-SimpleLDAP
version = file: VERSION
author = Alexandre Ferland
author_email = me@alexferl.com
url = https://github.com/alexferl/flask-simpleldap
description = LDAP authentication extension for Flask
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    Flask>=2.2.5
    python-ldap>=3.0.0
